--- a/src/app/components/admin/faq/faq.component.html
+++ b/src/app/components/admin/faq/faq.component.html
@@ -1,7 +1,7 @@
 <div class="search-block">
-    <h2 class="Large">How can we help?</h2>
+    <h2 class="Big">How can we help?</h2>
     <div class="input">
-        <input class="BackgroundColorLight BorderColor Small Color" #search type="text"  placeholder="Search questions" (input)="checkSearchInput($event)">
+        <input class="BackgroundColorLight BorderColor Tiny Color" #search type="text"  placeholder="Search questions" (input)="checkSearchInput($event)">
         <img src="./assets/imgs/search.png" alt="" class="ColorBackground">
     </div>
     <p class="Tiny">Enter a question in the text field or select from the suggested</p>
