--- a/src/app/components/admin/head/head.component.scss
+++ b/src/app/components/admin/head/head.component.scss
@@ -2,12 +2,15 @@
 :host {
     flex-grow: 1;
     max-width: 86%;
-    height: 95%;
+    height: 100%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 .block {
