--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,3 +1,9 @@
+<header>
+    <app-element *ngFor="let item of headerSchema?.body?.main?.children" [element]="item" ></app-element>
+</header>
 <main>
-    <app-element *ngFor="let item of children" [element]="item" [ngClass]="item.properties?.className ? item.properties.className : null"></app-element>
+    <app-element *ngFor="let item of mainSchema?.body?.main?.children" [element]="item"></app-element>
 </main>
+<footer>
+    <app-element *ngFor="let item of footerSchema?.body?.main?.children" [element]="item"></app-element>
+</footer>
