--- a/src/app/components/admin/header-footer/header-footer.component.scss
+++ b/src/app/components/admin/header-footer/header-footer.component.scss
@@ -3,8 +3,11 @@
     position: relative;
     flex-grow: 1;
     max-width: 86%;
+    height: calc(100vh - $size-index * 4.5);
     box-sizing: border-box;
-    padding-left: 35px;
+    padding: 35px;
+    padding-top: 0px;
+    padding-right: 0px;
     display: flex;
     align-items: start;
     justify-content: space-between;
