--- a/src/app/components/admin/page-settings/page-settings.component.scss
+++ b/src/app/components/admin/page-settings/page-settings.component.scss
@@ -59,25 +59,33 @@
 }
 .card {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     width: 50%;
     img {
         width: 100%;
+        
         cursor: pointer;
         border-radius: 20px;
         transition-duration: 0.3s;
         margin-bottom: 10px;
     }
-    a{
-        display: block;
-        padding: 10px 20px;
-        margin: 0px 10px;
-        color: white;
-        text-decoration: none;
-        border-radius: 10px;
-        border: 3px solid;
-        width: fit-content;
-        text-transform: uppercase;
+    &>div{
+        display: flex;
+        flex-wrap: wrap;
+        a{
+            display: block;
+            padding: 10px 20px;
+            margin: 0px 10px;
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            border: 3px solid;
+            width: fit-content;
+            text-transform: uppercase;
+            height: fit-content;
+        }
+
     }
 }
 .head {
@@ -222,5 +230,11 @@
         transform: translate(-50%, -50%);
         color: $color;
         font-size: calc($size-index * 2);
+    }
+    img{
+        flex-grow: 1;
+    }
+    &>div{
+        transform: translate(0px, 120%);
     }
 }
