--- a/src/app/components/admin/pages/pages.component.scss
+++ b/src/app/components/admin/pages/pages.component.scss
@@ -2,14 +2,15 @@
 :host{
     flex-grow: 1;
     max-width: 86%;
-    height: 95%;
+    height: 100%;
     box-sizing: border-box;
     padding: 35px;
     padding-top: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: relative;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 #search{
