--- a/src/app/components/admin/template-page/template-page.component.html
+++ b/src/app/components/admin/template-page/template-page.component.html
@@ -1,6 +1,6 @@
 <app-edit-config-forms></app-edit-config-forms>
 <div class="constructor">
-    <h2 class="Color Large">Header/Footer constructor</h2>
+    <h2 class="Color Large">{{templateName}}</h2>
     <div class="constructorMain">
         <div class="clone-container" id="clone-container"></div>
         <div class="element template-body" dropzone="true" placeholder="template body"></div>
@@ -9,7 +9,7 @@
 
 <div class="constructorAside">
     <div class="constructorAsideBtn">
-        <p (click)="updateImage()">Upade Template</p>
+        <p (click)="updateStructure()" #update>Update Template</p>
     </div>
     <div class="elements">
         <app-constructor-element *ngFor="let elementConf of constructorElements" [element]="elementConf"></app-constructor-element>
