--- a/src/app/components/page/page.component.scss
+++ b/src/app/components/page/page.component.scss
@@ -1,6 +1,268 @@
+$size-index: calc(1vw + 1svh );
 :host{
-    display: block;
-    width: auto;
-    height: auto;
-    overflow-x: hidden;
+    display: contents;
+}
+:host::ng-deep{
+    
+    header{
+        border-top: none;
+
+        @media (max-width: 1300px){
+            .video-js{
+                width: 62vw  !important;
+                height: 32vw  !important;
+            }
+            .swiper{
+                width: 50%  !important;
+                max-width: none !important;
+            }
+            .area{
+                max-width: 75% !important;
+            }
+            .Large {
+                font-size: calc($size-index * 3) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Big {
+                font-size: calc($size-index * 2.2) !important;
+                font-weight: 500;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+            }
+            .Middle {
+                font-size: calc($size-index * 1.5) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Small {
+                font-size: calc($size-index * 1.2) !important;
+                font-weight: 500;
+            }
+            .Tiny {
+                font-size: calc($size-index * 0.95) !important;
+                font-weight: 400;
+            }
+        }
+        .title{
+            transform: translate(0px, 40%);
+            background-color: whitesmoke;
+            border-radius: 5px;
+            font-size: calc($size-index * 2.5);
+            width: fit-content;
+        }
+        .list{
+            align-items: center;
+            align-self: baseline !important;
+        }
+        .btn{
+            width: fit-content;
+            height: fit-content;
+            padding: 10px 20px;
+            font-size: calc($size-index * 1);
+            color: black;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition-duration: .3s;
+            &:hover{
+                transform: translate(0px, 10%);
+                scale: 1.2;
+            }
+        }
+        .social-btn{
+            height: fit-content;
+            background-color: black;
+            padding: 5px;
+            border-radius: 5px;
+            box-sizing: content-box;
+            transition-duration: .3s;
+            &:hover{
+                transform: translate(0px, -10%);
+                scale: .9;
+            }
+        }
+    }
+    main{
+        margin-top: 20px;
+        .title, .paragraph{
+            color: white;
+        }
+        .swiper{
+            max-width: 50vw;
+            .swiper-slide{
+                padding: 0px 20px;
+            }
+        }
+        @media (max-width: 1300px){
+            main{
+                overflow: visible !important;
+            }
+            .video-js{
+                width: 62vw  !important;
+                height: 32vw  !important;
+            }
+            .swiper{
+                width: 50%  !important;
+                max-width: none !important;
+            }
+            .area{
+                max-width: 75% !important;
+            }
+            .list{
+                width: 50% !important;
+                padding: 0 !important;
+                li{
+                    width: 100% !important;
+                }
+                .area{
+                    width: 0 !important;
+                    max-width: none!important;
+                }
+            }
+            .Large {
+                font-size: calc($size-index * 3) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Big {
+                font-size: calc($size-index * 2.2) !important;
+                font-weight: 500;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+            }
+            .Middle {
+                font-size: calc($size-index * 1.8) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Small {
+                font-size: calc($size-index * 1.5) !important;
+                font-weight: 500;
+            }
+            .Tiny {
+                font-size: calc($size-index * 0.95) !important;
+                font-weight: 400;
+            }
+        }
+        @media (max-width: 1050px){
+            .video-js{
+                width: 98vw !important;
+                height: 55vw !important;
+            }
+            .swiper{
+                width: 100% !important;
+                max-width: none !important;
+            }
+            .area{
+                width: 100% !important;
+                max-width: none!important;
+            }
+            .list{
+                width: 100% !important;
+                li{
+                    width: 100%;
+                }
+                width: 100% !important;
+                padding: 0 !important;
+                .area{
+                    width: 0 !important;
+                    max-width: none!important;
+                }
+            }
+            .social-btn{
+                img{
+                    width: calc($size-index * 3) !important;
+                }
+            }
+            .Large {
+                font-size: calc($size-index * 3.5) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Big {
+                font-size: calc($size-index * 2.5) !important;
+                font-weight: 500;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+            }
+            .Middle {
+                font-size: calc($size-index * 2.2) !important;
+                font-weight: 600;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+            }
+            .Small {
+                font-size: calc($size-index * 1.9) !important;
+                font-weight: 500;
+            }
+            .Tiny {
+                font-size: calc($size-index * 1.3) !important;
+                font-weight: 400;
+            }
+        }
+    }
+    footer{
+        padding: 15px 20px;
+        background-color: rgb(255, 255, 255);
+        min-height: calc($size-index * 10);
+        background-color: white;
+        background-image: url("/assets/imgs/guest/footerBack.png");
+        background-size: cover;
+        background-position: center top;
+        box-shadow:inset 0px 0px 20px 5px rgba(0, 0, 0, 0.95);
+        .title, .paragraph{
+            color: black;
+        }
+        .btn{
+            color: black;
+            text-decoration: none;
+        }
+        @media (max-width: 1300px){
+            .area, .list{
+                width: 100% !important;
+                flex-direction: row !important;
+                justify-content: start !important;
+                li{
+                    flex-grow: 0 !important;
+                }
+            }
+        }
+        @media (max-width: 765px){
+            .list{
+                width: 100% !important;
+                flex-direction: row !important;
+            }
+        }
+    }
+    
+}
+header{
+    background-color: whitesmoke;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    overflow: visible;
+    width: 98%;
+}
+main{
+    overflow: hidden;
+    height: max-content;
+    align-items: start;
+    width: 85%;
+    flex-grow: 1;
+}
+footer{
+    width: 98%;
+}
+main, header, footer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
 }
