--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,46 @@ $color-hover: rgb(35, 217, 205);
 $color-opacity: rgba(51, 220, 208, 0.6);
 $color-opacity-hover: rgba(35, 217, 205, 0.6);
 $color-opacity-opacity: rgba(51, 220, 208, 0.3);
-$size-index: calc(1vw + 1vh);
+$color-opacity-opacity-opacity: rgba(51, 220, 208, 0.15);
+$size-index: calc(1vw + 1svh);
 html,
 body {
     padding: 0px;
-    margin: 0px;
+    margin: auto;
+    width: 100vw;
+    min-height: 100svh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: hidden;
+    background: rgb(15, 15, 15);
+    background-image: url(/assets/imgs/guest/back1.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-right: 10px;
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+        background: #25252574;
+    }
+
+    /* Handle */
+    & ::-webkit-scrollbar-thumb {
+        background: #5c5c5c58;
+        width: 5px;
+        border-radius: 5px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 }
 * {
     font-family: "Inter", sans-serif;
@@ -26,11 +61,30 @@ body {
     & > .element {
         width: 15vw !important;
         height: 10vh !important;
+        margin: 0 !important;
         pointer-events: none;
         transition-duration: 0s !important;
         transform: translate(-50%, -50%);
         box-shadow: inset 0px 0px 10px $color;
-
+        font-size: calc($size-index * .65);
+        * {
+            display: none;
+        }
+        &::before {
+            content: attr(placeholder);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 1.3em;
+            font-weight: 700;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            color: $color-opacity;
+            z-index: 0;
+        }
         & > * {
             display: none;
         }
@@ -47,20 +101,165 @@ body {
     footer,
     main,
     .template-body {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
         min-height: 20vh;
         padding: 15px;
         box-sizing: border-box;
         width: 100%;
         box-shadow: inset 0px 0px 10px $color;
-        .img {
+        align-items: center;
+        color: white;
+        &::before {
+            content: attr(placeholder);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 1.3em;
+            font-weight: 700;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            color: $color-opacity;
+            z-index: 0;
+        }
+        .section,
+        .title {
+            width: 100%;
+            & > h1,
+            & > h2,
+            & > h3,
+            & > h4,
+            & > h5,
+            & > h6 {
+                z-index: 1;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+            }
+        }
+        .area {
             flex-grow: 2;
+            min-width: 15%;
+            height: max-content;
+        }
+        .img {
+            width: 100%;
+            & > img {
+                width: 100%;
+                height: auto;
+            }
+        }
+        .list {
+            width: 100%;
+            height: fit-content;
+            li {
+                box-shadow: inset 0px 0px 10px $color-opacity-opacity;
+                padding: 0px;
+                box-sizing: border-box;
+                height: fit-content;
+                &::before {
+                    content: "li";
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    width: 100%;
+                    text-align: center;
+                    text-transform: uppercase;
+                    font-size: 1.3em;
+                    font-weight: 700;
+                    transform: translate(-50%, -50%);
+                    pointer-events: none;
+                    color: $color-opacity-opacity;
+                    z-index: 0;
+                }
+            }
+        }
+        .btn {
+            display: flex;
+            width: fit-content;
+            a {
+                width: 100%;
+                min-width: calc($size-index * 3);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                font-weight: 500;
+            }
+        }
+        .social-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: fit-content;
+            min-width: 2.5vw;
+            padding: 0 !important;
+            a > img {
+                width: calc($size-index * 1);
+            }
+        }
+        .download-btn {
+            display: flex;
+            width: fit-content;
+            min-width: 5vw;
+            height: fit-content;
+            a {
+                width: 100%;
+            }
+        }
+        .video {
+            width: fit-content;
+            video {
+                width: calc($size-index * 17.6);
+                height: calc($size-index * 9.9);
+            }
+        }
+        .swipers {
+            width: 100%;
+            max-width: 35vw;
+            .swiper {
+                width: 100%;
+            }
+        }
+        .paragraph {
+            min-width: 50%;
+            flex-grow: 1;
+            margin: 0 !important;
+            padding: 0;
+            list-style: none;
+            & > p {
+                width: 100%;
+                margin: 0;
+                padding: 0;
+                color: white;
+                align-self: stretch;
+                z-index: 1;
+            }
         }
         .element {
             min-height: 10vh;
-            padding: 15px;
+            padding: 10px;
             box-sizing: border-box;
-            max-height: 100%;
             box-shadow: inset 0px 0px 10px $color;
+
+            &::before {
+                content: attr(placeholder);
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 1.3em;
+                font-weight: 700;
+                transform: translate(-50%, -50%);
+                pointer-events: none;
+                color: $color-opacity;
+                z-index: 0;
+            }
             img {
                 object-fit: contain;
             }
@@ -69,14 +268,6 @@ body {
     * {
         transition-property: left, right, background-color;
         transition-duration: 0.5s;
-    }
-    a {
-        // pointer-events: none;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 }
 .constructorAside {
@@ -128,7 +319,19 @@ body {
         }
         .element {
             &::before {
-                color: $color !important;
+                content: attr(placeholder);
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                width: 100%;
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 1.3em;
+                font-weight: 700;
+                transform: translate(-50%, -50%);
+                pointer-events: none;
+                color: $color-opacity;
+                z-index: 0;
             }
             width: 100%;
             height: 10vh;
@@ -146,91 +349,50 @@ body {
         }
     }
 }
-.section,
-.title,
-.paragraph,
-.img,
-.list,
-.btn {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    & > h1,
-    & > h2,
-    & > h3,
-    & > h4,
-    & > h5,
-    & > h6,
-    & > p,
-    & > img,
-    & > ul,
-    & > a {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        color: white;
-    }
-}
-.area {
-    flex-grow: 2;
-    min-width: 15%;
-}
+
 .element {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    &::before {
-        content: attr(placeholder);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 1.3em;
-        font-weight: 700;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-        color: $color-opacity;
-        z-index: 0;
-    }
+
     & > .borders,
     & > .funcBtns {
         transition-property: opacity;
         opacity: 0;
-        pointer-events: none;
     }
     .active:hover:not(.prime) {
         & > .borders,
         & > .funcBtns {
             opacity: 1;
-            pointer-events: none;
-            z-index: 1;
+
             & > * {
                 pointer-events: all;
             }
         }
     }
-    .funcBtns {
-        width: calc(100% - 25px);
-        height: 4vh;
+    & > .funcBtns {
+        z-index: 2;
         position: absolute;
+        top: 0px;
+        right: 0px;
         display: flex;
         justify-content: end;
         align-items: center;
+        width: calc(100% - 25px);
+        height: 4vh;
+        pointer-events: none;
         img {
             height: 100%;
             cursor: pointer;
-            pointer-events: all;
         }
     }
-    .borders {
+    & > .borders {
         position: absolute;
         left: 0px;
         top: 0px;
         width: 100%;
         height: 100%;
+        // pointer-events: none;
         .border1,
         .border2,
         .border3,
@@ -240,7 +402,6 @@ body {
             background-color: $color-opacity;
             box-shadow: 0px 0px 0px $color-opacity;
             transition-duration: 0.5s;
-            pointer-events: all;
             &:hover {
                 background-color: $color-hover;
                 box-shadow: 0px 0px 5px $color-opacity-hover;
@@ -250,50 +411,49 @@ body {
         .border1,
         .border2 {
             width: 100%;
-            height: 12px;
+            height: 10px;
             border-radius: 10px;
         }
         .border3,
         .border4 {
-            width: 12px;
+            width: 10px;
             height: 100%;
             border-radius: 10px;
         }
+        .border1 {
+            top: -5px;
+        }
         .border2 {
-            bottom: 0px;
+            bottom: -5px;
+        }
+        .border3 {
+            left: -5px;
         }
         .border4 {
-            right: 0px;
+            right: -5px;
         }
     }
-    ul {
+    & > ul {
         display: flex;
         flex-wrap: wrap;
         padding: 0;
         margin: 0;
         list-style: none;
+        width: 100%;
         li {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-self: stretch;
+            flex-wrap: wrap;
             position: relative;
             min-width: 15%;
             flex-grow: 1;
-            box-shadow: inset 0px 0px 10px $color;
-            &::before {
-                content: "li";
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 100%;
-                text-align: center;
-                text-transform: uppercase;
-                font-size: 1.3em;
-                font-weight: 700;
-                transform: translate(-50%, -50%);
-                pointer-events: none;
-            }
         }
     }
-    a {
+    & > a {
         text-decoration: none;
+        z-index: 1;
     }
 }
 .show {
@@ -362,6 +522,9 @@ body {
 .ColorBackgroundOpacityOpacity {
     background-color: $color-opacity-opacity;
 }
+.ColorBackgroundOpacityOpacityOpacity {
+    background-color: $color-opacity-opacity-opacity;
+}
 .BackgroundColor {
     background-color: rgb(40, 40, 40);
 }
@@ -409,7 +572,6 @@ body {
     font-size: calc($size-index * 0.65);
     font-weight: 400;
 }
-.disableBtn{
+.disableBtn {
     background-color: $color-opacity-opacity;
-    
 }
